tests/NormalTests/paczka2/big_fuzzy/83660497.err
Error in line 6: mODBqEP A384 82,71
Error in line 4: mODBqEP S539 13,4
Error in line 7: mODBqEP A384 385,9
Error in line 8: A384 S539 12,8
Error in line 9: mODBqEP S539 93,9
Error in line 12: mODBqEP A384 50,8
Error in line 17: 2Bv S392 96,2
Error in line 13: mODBqEP S797 33,5
Error in line 29: mODBqEP A384 79,0
Error in line 35: govtWW2 S539 68,2
Error in line 31: mODBqEP S392 55,1
Error in line 40: mODBqEP S539 71,4
Error in line 46: nKOFX S797 86,3
Error in line 49: nKOFX A384 97,4
Error in line 71: A384 S392 55,7
Error in line 77: A384 S539 31,4
Error in line 84: nKOFX S539 10,1
Error in line 89: mODBqEP S797 36,7
Error in line 93: 2Bv S539 76,2
Error in line 113: LlKXik0B S392 82,4
Error in line 146: A384 S392 70,41
Error in line 141: A384 S392 51,9
Error in line 154: govtWW2 S797 92,3
Error in line 192: LlKXik0B S392 76,4
Error in line 190: govtWW2 A384 96,6
Error in line 191: nKOFX S539 30,1
Error in line 214: mODBqEP A384 74,9
Error in line 219: mODBqEP S797 11,4
Error in line 212: govtWW2 S539 53,6
Error in line 223: mODBqEP S392 83,2
Error in line 228: mODBqEP S797 75,0
Error in line 229: govtWW2 S797 72,7
Error in line 232: govtWW2 A384 76,60
Error in line 240: mODBqEP S392 75,6
Error in line 238: govtWW2 S539 17,9
